--- a/uiGallery.html
+++ b/uiGallery.html
@@ -16,12 +16,12 @@
 	<meta name="description" content=""/>
 	<meta name="format-detection" content="telephone=no, address=no, email=no"/>
 	
-	<link rel="icon" href="/favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="/css/common.css"/>
-	<link rel="stylesheet" type="text/css" href="/css/ui.css"/>
+	<link rel="icon" href="https://tinyor.github.io/tinyor/favicon.ico"/>
+	<link rel="stylesheet" type="text/css" href="https://tinyor.github.io/tinyor/css/common.css"/>
+	<link rel="stylesheet" type="text/css" href="https://tinyor.github.io/tinyor/css/ui.css"/>
 
-	<script type="text/javascript" src="/js/common.js"></script>
-	<script type="text/javascript" src="/js/ui.js"></script>
+	<script type="text/javascript" src="https://tinyor.github.io/tinyor/js/common.js"></script>
+	<script type="text/javascript" src="https://tinyor.github.io/tinyor/js/ui.js"></script>
 	
 	<style type="text/css">
 html					{font-size:13px}
@@ -48,20 +48,20 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 			<li>
 				<div id="ui-gallery-1" class="ui-gallery">
 					<ul>
-						<li><img src="/img/sample/1.jpg"/></li>
-						<li><img src="/img/sample/2.jpg"/></li>
-						<li><img src="/img/sample/3.jpg"/></li>
-						<li><img src="/img/sample/4.jpg"/></li>
+						<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
+						<li><img src="https://tinyor.github.io/tinyor/img/2.jpg"/></li>
+						<li><img src="https://tinyor.github.io/tinyor/img/3.jpg"/></li>
+						<li><img src="https://tinyor.github.io/tinyor/img/4.jpg"/></li>
 					</ul>
 				</div>
 			</li>
 			<li>
 				<div id="ui-gallery-2" class="ui-gallery">
 					<ul>
-						<li><img src="/img/sample/1.jpg"/></li>
-						<li><img src="/img/sample/2.jpg"/></li>
-						<li><img src="/img/sample/3.jpg"/></li>
-						<li><img src="/img/sample/4.jpg"/></li>
+						<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
+						<li><img src="https://tinyor.github.io/tinyor/img/2.jpg"/></li>
+						<li><img src="https://tinyor.github.io/tinyor/img/3.jpg"/></li>
+						<li><img src="https://tinyor.github.io/tinyor/img/4.jpg"/></li>
 					</ul>
 				</div>
 			</li>
@@ -70,20 +70,20 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 					<dt>
 						<div id="ui-gallery-3" class="ui-gallery">
 							<ul>
-								<li><img src="/img/sample/1.jpg"/></li>
-								<li><img src="/img/sample/2.jpg"/></li>
-								<li><img src="/img/sample/3.jpg"/></li>
-								<li><img src="/img/sample/4.jpg"/></li>
+								<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
+								<li><img src="https://tinyor.github.io/tinyor/img/2.jpg"/></li>
+								<li><img src="https://tinyor.github.io/tinyor/img/3.jpg"/></li>
+								<li><img src="https://tinyor.github.io/tinyor/img/4.jpg"/></li>
 							</ul>
 						</div>
 					</dt>
 					<dd>
 						<div id="ui-gallery-4" class="ui-gallery">
 							<ul>
-								<li><img src="/img/sample/1.jpg"/></li>
-								<li><img src="/img/sample/2.jpg"/></li>
-								<li><img src="/img/sample/3.jpg"/></li>
-								<li><img src="/img/sample/4.jpg"/></li>
+								<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
+								<li><img src="https://tinyor.github.io/tinyor/img/2.jpg"/></li>
+								<li><img src="https://tinyor.github.io/tinyor/img/3.jpg"/></li>
+								<li><img src="https://tinyor.github.io/tinyor/img/4.jpg"/></li>
 							</ul>
 						</div>					
 					</dd>
