--- a/uiGallery.html
+++ b/uiGallery.html
@@ -10,6 +10,7 @@
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=EDGE"/>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 	<meta name="author" content=""/>
 	<meta name="google" value="notranslate"/>
@@ -21,8 +22,7 @@
 	<link rel="stylesheet" type="text/css" href="https://tinyor.github.io/tinyor/css/ui.css"/>
 
 	<script type="text/javascript" src="https://tinyor.github.io/tinyor/js/common.js"></script>
-	<script type="text/javascript" src="https://tinyor.github.io/tinyor/js/ui.js"></script>
-	
+<!--<script type="text/javascript" src="https://tinyor.github.io/tinyor/js/ui.js"></script>-->
 	<style type="text/css">
 html					{font-size:13px}
 body					{background-color:#f8f8f8; font-size:13px; overflow:auto}
