새로 변경된 함수명으로 변경

--- a/uiGallery.html
+++ b/uiGallery.html
@@ -144,7 +144,7 @@ function uiGallery(object){
 					y			: event.y,
 					v			: event.x,
 					id			: event.id,
-					time		: timer(),
+					time		: getTime(),
 					prevent		: false,
 					direction	: undefined
 					}
