--- a/uiGallery.html
+++ b/uiGallery.html
@@ -93,6 +93,10 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 	</main>
 </body>
 <script type="text/javascript">
+/*
+이미지 슬라이더 개발 노트
+*/
+	
 function doReady(){
 	uiGallery({
 		container	: "ui-gallery-1",
