--- a/uiGallery.html
+++ b/uiGallery.html
@@ -46,6 +46,7 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 	<main id="main">
 		<ul>
 			<li>
+				<h4>MARGIN, MAX-WIDTH, LOOP</h4>
 				<div id="ui-gallery-1" class="ui-gallery">
 					<ul>
 						<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
@@ -56,6 +57,7 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 				</div>
 			</li>
 			<li>
+				<h4>PADDING, MARGIN, MAX-WIDTH, LOOP</h4>
 				<div id="ui-gallery-2" class="ui-gallery">
 					<ul>
 						<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
@@ -68,6 +70,7 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 			<li>
 				<dl>
 					<dt>
+						<h4>WITHOUT MARGIN AND PADDING, LOOP</h4>					
 						<div id="ui-gallery-3" class="ui-gallery">
 							<ul>
 								<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
@@ -78,6 +81,7 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 						</div>
 					</dt>
 					<dd>
+						<h4>FADE EFFECT</h4>					
 						<div id="ui-gallery-4" class="ui-gallery">
 							<ul>
 								<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
@@ -367,6 +371,8 @@ function uiGallery(object){
 			}
 			
 		container.style.height = Math.round(width * self.ratio) + "px";
+		if(self.effect == "fade") return;
+		
 		width += margin;
 
 		var min = 0;
