--- a/uiGallery.html
+++ b/uiGallery.html
@@ -32,11 +32,7 @@ main > ul > li + li		{margin-top:50px}
 dl dt					{padding-right:10px}
 dl dd					{padding-left:10px}
 
-table					{width:100%; border-radius:5px; line-height:35px; text-align:center}
-table th				{width:30%; background-color:#f8f8f8; font-weight:400}
-table th,
-table td				{padding:0 10px}
-
+h4						{margin-bottom:10px; font-size:22px}
 input					{appearance:radio; -webkit-appearance:radio}
 button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; border-radius:35px; border-color:#4c8cfc; font-size:15px; font-weight:400; color:white}
 	</style>
@@ -57,7 +53,7 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 				</div>
 			</li>
 			<li>
-				<h4>PADDING, MARGIN, MAX-WIDTH, LOOP</h4>
+				<h4>LEFT-PADDING, MARGIN, MAX-WIDTH, LOOP</h4>
 				<div id="ui-gallery-2" class="ui-gallery">
 					<ul>
 						<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
@@ -70,7 +66,7 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 			<li>
 				<dl>
 					<dt>
-						<h4>WITHOUT MARGIN AND PADDING, LOOP</h4>					
+						<h4>NO MARGIN, NO PADDING, LOOP</h4>					
 						<div id="ui-gallery-3" class="ui-gallery">
 							<ul>
 								<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
