--- a/uiGallery.html
+++ b/uiGallery.html
@@ -17,12 +17,11 @@
 	<meta name="description" content=""/>
 	<meta name="format-detection" content="telephone=no, address=no, email=no"/>
 	
-	<link rel="icon" href="https://tinyor.github.io/tinyor/favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="https://tinyor.github.io/tinyor/css/common.css"/>
-	<link rel="stylesheet" type="text/css" href="https://tinyor.github.io/tinyor/css/ui.css"/>
+	<link rel="icon" href="./favicon.ico"/>
+	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
+	<link rel="stylesheet" type="text/css" href="./css/ui.css"/>
 
-	<script type="text/javascript" src="https://tinyor.github.io/tinyor/js/common.js"></script>
-<!--<script type="text/javascript" src="https://tinyor.github.io/tinyor/js/ui.js"></script>-->
+	<script type="text/javascript" src="./js/common.js"></script>
 	<style type="text/css">
 html					{font-size:13px}
 body					{background-color:#f8f8f8; font-size:13px; overflow:auto}
@@ -46,21 +45,29 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 				<h4>MAX-WIDTH TEST</h4>
 				<div id="ui-gallery-1" class="ui-gallery">
 					<ul>
-						<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
-						<li><img src="https://tinyor.github.io/tinyor/img/2.jpg"/></li>
-						<li><img src="https://tinyor.github.io/tinyor/img/3.jpg"/></li>
-						<li><img src="https://tinyor.github.io/tinyor/img/4.jpg"/></li>
+						<li><img src="./img/1.jpg"/></li>
+						<li><img src="./img/2.jpg"/></li>
+						<li><img src="./img/3.jpg"/></li>
+						<li><img src="./img/4.jpg"/></li>
 					</ul>
 				</div>
 			</li>
 			<li>
-				<h4>PADDING TEST</h4>
+				<h4>SINGLE IMAGE LOOP</h4>
 				<div id="ui-gallery-2" class="ui-gallery">
 					<ul>
-						<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
-						<li><img src="https://tinyor.github.io/tinyor/img/2.jpg"/></li>
-						<li><img src="https://tinyor.github.io/tinyor/img/3.jpg"/></li>
-						<li><img src="https://tinyor.github.io/tinyor/img/4.jpg"/></li>
+						<li><img src="./img/1.jpg"/></li>
+					</ul>
+				</div>
+			</li>			
+			<li>
+				<h4>PADDING TEST</h4>
+				<div id="ui-gallery-3" class="ui-gallery">
+					<ul>
+						<li><img src="./img/1.jpg"/></li>
+						<li><img src="./img/2.jpg"/></li>
+						<li><img src="./img/3.jpg"/></li>
+						<li><img src="./img/4.jpg"/></li>
 					</ul>
 				</div>
 			</li>
@@ -68,23 +75,23 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 				<dl>
 					<dt>
 						<h4>MOBILE TEST</h4>					
-						<div id="ui-gallery-3" class="ui-gallery">
+						<div id="ui-gallery-4" class="ui-gallery">
 							<ul>
-								<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
-								<li><img src="https://tinyor.github.io/tinyor/img/2.jpg"/></li>
-								<li><img src="https://tinyor.github.io/tinyor/img/3.jpg"/></li>
-								<li><img src="https://tinyor.github.io/tinyor/img/4.jpg"/></li>
+								<li><img src="./img/1.jpg"/></li>
+								<li><img src="./img/2.jpg"/></li>
+								<li><img src="./img/3.jpg"/></li>
+								<li><img src="./img/4.jpg"/></li>
 							</ul>
 						</div>
 					</dt>
 					<dd> 
 						<h4>FADE EFFECT TEST</h4>					
-						<div id="ui-gallery-4" class="ui-gallery">
+						<div id="ui-gallery-5" class="ui-gallery">
 							<ul>
-								<li><img src="https://tinyor.github.io/tinyor/img/1.jpg"/></li>
-								<li><img src="https://tinyor.github.io/tinyor/img/2.jpg"/></li>
-								<li><img src="https://tinyor.github.io/tinyor/img/3.jpg"/></li>
-								<li><img src="https://tinyor.github.io/tinyor/img/4.jpg"/></li>
+								<li><img src="./img/1.jpg"/></li>
+								<li><img src="./img/2.jpg"/></li>
+								<li><img src="./img/3.jpg"/></li>
+								<li><img src="./img/4.jpg"/></li>
 							</ul>
 						</div>					
 					</dd>
@@ -111,6 +118,15 @@ function doReady(){
 	uiGallery({
 		container	: "ui-gallery-2",
 		margin		: 10,
+		padding		: 0,
+		maxWidth	: 200,
+		infinite	: true,
+		autoplay	: false,
+		});		
+		
+	uiGallery({
+		container	: "ui-gallery-3",
+		margin		: 10,
 		padding		: 25,
 		maxWidth	: 300,
 		infinite	: true,
@@ -118,7 +134,7 @@ function doReady(){
 		});
 		
 	uiGallery({
-		container	: "ui-gallery-3",
+		container	: "ui-gallery-4",
 		margin		: 10,
 		padding		: 25,
 		infinite	: true,
@@ -126,7 +142,7 @@ function doReady(){
 		});
 		
 	uiGallery({
-		container	: "ui-gallery-4",
+		container	: "ui-gallery-5",
 		effect		: "fade",
 		infinite	: true,
 		autoplay	: true
