--- a/uiGallery.html
+++ b/uiGallery.html
@@ -33,7 +33,7 @@ dl dt					{padding-right:10px}
 dl dd					{padding-left:10px}
 
 h2						{margin-bottom:50px; text-align:center; font-size:32px; font-weight:500; color:#4c8cfc}
-h4						{margin-bottom:10px; font-size:20px; font-weight:500}
+h4						{margin-bottom:10px; font-size:24px; font-weight:500}
 input					{appearance:radio; -webkit-appearance:radio}
 button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; border-radius:35px; border-color:#4c8cfc; font-size:15px; font-weight:400; color:white}
 	</style>
@@ -63,7 +63,7 @@ button					{margin-top:25px; width:100%; height:42px; background-color:#4c8cfc; 
 				</div>
 			</li>			
 			<li>
-				<h4>LEFT-PADDING TEST</h4>
+				<h4>LEFT-PADDING SAMPLE</h4>
 				<div id="ui-gallery-3" class="ui-gallery">
 					<ul>
 						<li><img src="./img/1.jpg"/></li>
