--- a/sample.html
+++ b/sample.html
@@ -18,8 +18,8 @@
 	<meta name="format-detection" content="telephone=no, address=no, email=no"/>
 	
 	<link rel="icon" href="./favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="./css/common.css"/>
-	<link rel="stylesheet" type="text/css" href="./css/ui.css"/>
+	<link rel="stylesheet" type="text/css" href="./css/common.css?v=2"/>
+	<link rel="stylesheet" type="text/css" href="./css/ui.css?v=2"/>
 
 	<script type="text/javascript" src="./js/common.js"></script>
 	
