--- a/sample.html
+++ b/sample.html
@@ -27,13 +27,13 @@
 
 body									{background-color:#f8f8f8}
 main									{margin:50px auto; padding:50px; width:100%; max-width:768px; background-color:white; border-radius:10px; border:1px solid #e0e0e0; box-sizing:border-box}
-
 section + section						{margin-top:75px}
+
 section .top							{text-align:center}
 section .top h3							{position:relative; display:inline-block; margin-bottom:55px; font-size:32px; overflow:visible}
 section .top h3:before					{content:""; position:absolute; left:50%; margin-left:-32.5px; bottom:-20px; width:75px; height:4px; background-color:#4c8cfc}
 section .top h3 i						{font-weight:bold; font-style:italic; font-family:"Times New Roman", "Times", "Serif"; color:#333}  
-section .bottom p						{margin-top:25px; padding:25px; background-color:#f5f5f5; border-radius:10px; font-size:1rem; box-sizing:border-box}
+section .bottom p						{margin-top:25px; padding:25px; background-color:#f5f5f5; border-radius:10px; font-size:16px; font-weight:300; color:#333; box-sizing:border-box}
 
 dl										{margin-top:30px}
 dl dt									{padding-right:10px; vertical-align:top}
@@ -50,7 +50,6 @@ dl + dl									{margin-top:50px}
 .title img								{display:block; margin:0 auto}
 .title figcaption						{position:absolute; left:0; top:175px; width:100%}
 
-
 .ui-chart								{min-height:275px}
 .ui-chart canvas						{width:100%; height:100%}
 
@@ -62,7 +61,6 @@ section									{}
 dl										{margin-top:0}
 dl dt									{display:block; margin-bottom:25px; padding-right:0}
 dl dd									{display:block; padding-left:0}
-
 
 .gallery .middle > div:first-child		{display:none}
 	}
@@ -85,7 +83,6 @@ dl dd									{display:block; padding-left:0}
 			<div class="top">
 				<h3><i>Image Slider</i></h3>
 			</div>
-			
 			<div class="middle">
 				<div id="ui-gallery-1" class="ui-gallery">
 					<ul>
@@ -118,6 +115,13 @@ dl dd									{display:block; padding-left:0}
 					</dd>
 				</dl>
 			</div>
+			<div class="bottom">
+				<p>
+					사이드 여백, 최대 가로 픽셀, 페이드 효과 등이 지원되며,
+					계속 반복 모드에서 뷰-포트에 비해 이미지가 부족할 경우 자동으로 이미지를 복사하여 생성시킵니다.
+					또한, 터치 시 스크롤 방향을 검사하여 흔들리는 현상이 없도록 구현하였습니다.
+				</p>
+			</div>			
 		</section>
 
 		<section class="compare">
@@ -148,6 +152,11 @@ dl dd									{display:block; padding-left:0}
 					</dd>					
 				</dl>
 			</div>
+			<div class="bottom">
+				<p>
+					캔버스를 이용해 구현한 파이 차트의 경우 프로토타입으로 학습 차원으로 개발하게 되었습니다.
+				</p>
+			</div>			
 		</section>
 	</main>
 </body>
