--- a/sample.html
+++ b/sample.html
@@ -18,10 +18,10 @@
 	<meta name="format-detection" content="telephone=no, address=no, email=no"/>
 	
 	<link rel="icon" href="./favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="./css/common.css?v=4"/>
-	<link rel="stylesheet" type="text/css" href="./css/ui.css?v=4"/>
+	<link rel="stylesheet" type="text/css" href="./css/common.css?v=5"/>
+	<link rel="stylesheet" type="text/css" href="./css/ui.css?v=5"/>
 
-	<script type="text/javascript" src="./js/common.js"></script>
+	<script type="text/javascript" src="./js/common.js?v=5"></script>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<style type="text/css">
 
