api token change

--- a/sample.html
+++ b/sample.html
@@ -209,7 +209,7 @@ dl dd										{display:block; padding-left:0}
 			</div>
 			<div class="bottom">
 				<p>
-					외부 API 서비르르 이용해 구현한 것으로 자동차 이미지에서 자동차 종류를 구분합니다.
+					외부 API 서비스를 이용해 구현한 것으로 자동차 이미지에서 자동차 종류를 구분합니다.
 				</p>
 			</div>			
 		</section>		
@@ -1234,7 +1234,7 @@ function uiCameraSubmit(blob){
 		url			: "https://dev.sighthoundapi.com/v1/recognition?objectType=vehicle",
 		type		: "post",
 		beforeSend	: function(request){
-			request.setRequestHeader("X-Access-Token", "lJcCHpKSkKllB9WVLjC7vq0DV1pFEMheBakC");
+			request.setRequestHeader("X-Access-Token", "YncjKU2iw0whw90nkqHe2AaXUFROtUSoikOF");
 			},
 		data		: blob,
 		processData	: false,
